examples/datalog/15_arithmetic/34_float_arithmetic.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_float_arith
Knowledge graph 'test_float_arith' created.
Switched to knowledge graph: test_float_arith
> .kg use test_float_arith
Switched to knowledge graph: test_float_arith
> +floats[(1.5, 2.5), (3.0, 1.5), (0.5, 0.5)].
Inserted 3 fact(s) into 'floats'.
> computed(A, B, Sum, Prod) :- floats(A, B), Sum = A + B, Prod = A * B.
Script error: Query execution failed: Unsafe rule: Atom { relation: "computed", args: [Variable("A"), Variable("B"), Variable("Sum"), Variable("Prod")] }. Variables ["Prod", "Sum"] in head do not appear in positive body atoms.
