examples/datalog/15_arithmetic/34_float_arithmetic.dl
% Test: Floating point arithmetic
% Expected: Handle float operations
% Category: 15_arithmetic
% Priority: P2 - Arithmetic patterns

.kg create test_float_arith
.kg use test_float_arith

+floats[(1.5, 2.5), (3.0, 1.5), (0.5, 0.5)].

% Float operations
computed(A, B, Sum, Prod) :- floats(A, B), Sum = A + B, Prod = A * B.

?- computed(A, B, S, P).

.kg use default
.kg drop test_float_arith
